--- a/css/index.css
+++ b/css/index.css
@@ -108,7 +108,7 @@ button:hover {
 }
 
 .github span a img {
-    height: 18px;
+    height: 1em;
     padding-bottom: 3px;
     vertical-align: middle;
 }
@@ -129,6 +129,7 @@ button:hover {
 
 select {
     width: 100%;
+    padding-left: 5px !important;
 }
 
 .select-wrapper::after {
